tests/NormalTests/paczka1/small_fuzzy/58046144.err
Error in line 2: S249 S249 18,5
Error in line 3: S249 S405 13,8
